2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/Solution.cs,
	  MonoDevelop.Projects/SolutionEntityItem.cs,
	  MonoDevelop.Projects/SolutionItem.cs,
	  MonoDevelop.Projects/DotNetProject.cs,
	  MonoDevelop.Projects/Project.cs: Changed how the configuration
	  parameter is interpreted in SolutionItem and subclasses. This
	  parameter will always be a solution configuration, even when used
	  in projects. So for example, project.Build (mm, "Debug") will not
	  build the Debug configuration of the project, but the configuration
	  mapped to the Debug solution configuration. The same for all other
	  methods taking a configuration as parameter.  This is needed to
	  ensure the consistency of operations which involve several
	  projects.

2008-06-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/IMethod.cs,
	  MonoDevelop.Projects.Dom/DomAttribute.cs,
	  MonoDevelop.Projects.Dom/IDomVisitor.cs,
	  MonoDevelop.Projects.Dom/DomParameter.cs,
	  MonoDevelop.Projects.Dom/DomMethod.cs,
	  MonoDevelop.Projects.Dom/DomEvent.cs,
	  MonoDevelop.Projects.Dom/DomField.cs,
	  MonoDevelop.Projects.Dom/DomTypeProxy.cs,
	  MonoDevelop.Projects.Dom/DomProperty.cs,
	  MonoDevelop.Projects.Dom/IParameter.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/IReturnType.cs,
	  MonoDevelop.Projects.Dom/AbstractMember.cs,
	  MonoDevelop.Projects.Dom/Namespace.cs,
	  MonoDevelop.Projects.Dom/FileEntry.cs: Worked on new dom.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProject.cs: Preserve the
	  new line char when saving a project.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectReference.cs,
	  MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Fix