@@ -1,3 +1,12 @@
+2008-06-05  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Projects.Dom/DomType.cs,
+	  MonoDevelop.Projects.Dom/DomReturnType.cs,
+	  MonoDevelop.Projects.Dom/CompoundType.cs,
+	  MonoDevelop.Projects.Dom/DomPersistence.cs,
+	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs,
+	  MonoDevelop.Projects.Dom/IReturnType.cs: Worked on new dom
+
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Projects/Solution.cs,
